--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="header" id="header">
                     <div class="content-inner">
                         <p>saya</p>
-                        <h1>Moch. Janwar Abdul Azis</h1>
+                        <h1>Moch Janwar Abdul Azis</h1>
                         <h2></h2>
                         <div class="typed-text">Mahasiswa STMIK YMI TEGAL, Web Designer</div>
                     </div>
