--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
                                     <div class="contact-info">
                                         <p><i class="fa fa-user"></i>Moch Janwar Abdul Azis</p>
                                         <p><i class="fa fa-tag"></i>Web Designer</p>
-                                        <p><i class="fa fa-envelope"></i> Email: <a href="mailto:yanuarabdulaziz2004@gmail.com">yanuarabdulaziz2004@gmail.com</a></p>
-                                        <p><i class="fa fa-phone"></i><a href="tel:+62 8975852546">+62 897-5852-546</a></p>
+                                        <p><i class="fa fa-envelope"></i> Email: <a href="mailto:yanuarabdulaziz2004@gmail.com" style="color: #1E90FF; text-decoration: underline;">yanuarabdulaziz2004@gmail.com</a></p>
+                                        <p><i class="fa fa-phone"></i><a href="tel:+62 8975852546" style="color: #1E90FF; text-decoration: underline;">+62 897-5852-546</a></p>
                                         <p><i class="fa fa-map-marker"></i>jln. sakti, TEGAL, INDONESIA</p>
                                         <div class="social">
                                             <a href="https://github.com/mAbdulA05" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
