--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
                             </div>
                             <div class="col-md-6 col-lg-7">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci. Donec molestie velit id libero blandit, quis suscipit urna suscipit. Donec aliquet erat eu lacinia iaculis. Ut tempor tellus eu sem pharetra feugiat. Proin libero ligula, gravida at porttitor eget.
+                                    Hai! Saya Moch. Janwar Abdul Azis, seorang mahasiswa Sistem Informasi yang memiliki minat besar dalam pengembangan sistem informasi dan teknologi cloud. Dalam perjalanan akademis saya, saya telah melakukan berbagai penelitian terkait sistem manajemen informasi dan e-commerce, serta menerapkan teknologi modern seperti cloud computing untuk pengelolaan infrastruktur IT.
+
+Selain itu, saya memiliki pengalaman dalam membangun aplikasi web progresif (PWA) dan terus berupaya mengembangkan keterampilan saya dalam pengembangan aplikasi berbasis web dan desain UX/UI. Saya juga tertarik untuk memanfaatkan teknologi untuk memecahkan masalah nyata dan menciptakan solusi inovatif bagi dunia bisnis.
+
+Jika Anda tertarik untuk berkolaborasi atau berdiskusi, jangan ragu untuk menghubungi saya.
                                 </p>
                                 <a class="btn" href="#contact"><i class="fa fa-hands-helping"></i>Hire Me</a>
                             </div>
