--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                                 <img src="img/about.jpg" alt="Image">
                             </div>
                             <div class="col-md-6 col-lg-7">
-                                <p>Hai! Saya Moch. Janwar Abdul Azis, seorang mahasiswa Sistem Informasi yang memiliki minat besar dalam pengembangan sistem informasi dan teknologi cloud. Dalam perjalanan akademis saya, saya telah melakukan berbagai penelitian terkait sistem manajemen informasi dan e-commerce, serta menerapkan teknologi modern seperti cloud computing untuk pengelolaan infrastruktur IT.
+                                <p>
+                                    Hai! Saya Moch. Janwar Abdul Azis, seorang mahasiswa Sistem Informasi yang memiliki minat besar dalam pengembangan sistem informasi dan teknologi cloud. Dalam perjalanan akademis saya, saya telah melakukan berbagai penelitian terkait sistem manajemen informasi dan e-commerce, serta menerapkan teknologi modern seperti cloud computing untuk pengelolaan infrastruktur IT.
 
 Selain itu, saya memiliki pengalaman dalam membangun aplikasi web progresif (PWA) dan terus berupaya mengembangkan keterampilan saya dalam pengembangan aplikasi berbasis web dan desain UX/UI. Saya juga tertarik untuk memanfaatkan teknologi untuk memecahkan masalah nyata dan menciptakan solusi inovatif bagi dunia bisnis.
 
