--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ Jika Anda tertarik untuk berkolaborasi atau berdiskusi, jangan ragu untuk menghu
                                 <div class="review-slider-item">
                                     <div class="review-text">
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci. Donec molestie velit id libero blandit, quis suscipit urna suscipit. Donec aliquet erat eu lacinia iaculis. Ut tempor tellus eu sem pharetra feugiat.
+                                           "Luar biasa! Janwar memiliki pemahaman mendalam tentang pengembangan sistem informasi. Dia tidak hanya teknis, tetapi juga memiliki wawasan bisnis yang kuat, yang sangat membantu dalam menyelesaikan masalah dengan solusi yang efektif."
                                         </p>
                                     </div>
                                     <div class="review-img">
@@ -231,7 +231,7 @@ Jika Anda tertarik untuk berkolaborasi atau berdiskusi, jangan ragu untuk menghu
                                 <div class="review-slider-item">
                                     <div class="review-text">
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci. Donec molestie velit id libero blandit, quis suscipit urna suscipit. Donec aliquet erat eu lacinia iaculis. Ut tempor tellus eu sem pharetra feugiat.
+                                            "Kemampuannya dalam membangun aplikasi yang responsif dan user-friendly sangat memudahkan pekerjaan kami. Kolaborasi dengan Janwar selalu berjalan lancar karena dia sangat komunikatif dan profesional."
                                         </p>
                                     </div>
                                     <div class="review-img">
@@ -247,7 +247,7 @@ Jika Anda tertarik untuk berkolaborasi atau berdiskusi, jangan ragu untuk menghu
                                 <div class="review-slider-item">
                                     <div class="review-text">
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci. Donec molestie velit id libero blandit, quis suscipit urna suscipit. Donec aliquet erat eu lacinia iaculis. Ut tempor tellus eu sem pharetra feugiat.
+                                            "Proyek yang dikerjakan selalu tepat waktu dan sesuai dengan harapan. Janwar adalah sosok yang berkomitmen dan memiliki etos kerja yang sangat tinggi."
                                         </p>
                                     </div>
                                     <div class="review-img">
